using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class StaticStrings : MonoBehaviour
{
    //Animations
    public static string move = "MOVE";
    public static string attack = "ATK";
    public static string attack2 = "ATK2";
    public static string death = "DEATH";
    public static string hurt = "HURT";
    //tags
    public static string player = "Player";

    //points
    public static string roof = "roof";
}
